--- a/Wrapsy/app/src/main/res/layout/activity_coupons.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_coupons.xml
@@ -40,7 +40,7 @@
             android:contentDescription="Notifications" />
 
         <ImageView
-            android:id="@+id/options"
+            android:id="@+id/more_options"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
@@ -186,7 +186,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/ic_PlushToy"
+                        android:src="@drawable/ic_plushtoy"
                         android:contentDescription="Delivery" />
 
                 </LinearLayout>
@@ -328,7 +328,7 @@
 
     </GridLayout>
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
