--- a/Wrapsy/app/src/main/res/layout/activity_more_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_options.xml
@@ -5,7 +5,7 @@
     android:background="#E6CEED"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".moreOptions">
+    tools:context=".MoreOptions">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
                 android:id="@+id/top_bar"
@@ -33,7 +33,7 @@
                     android:src="@drawable/ic_wrapsy" />
 
                 <ImageView
-                    android:id="@+id/menuIcon"
+                    android:id="@+id/btn_notificaciones"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
@@ -48,7 +48,6 @@
             </RelativeLayout>
         <LinearLayout
             android:orientation="vertical"
-            android:layout_below="@id/iv_favorites"
             android:layout_marginTop="60dp"
             android:layout_centerHorizontal="true"
             android:layout_width="match_parent"
@@ -60,9 +59,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Purchase History"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:background="@drawable/edit_text_bg"
-                android:drawableEnd=""
                 android:gravity="center_vertical|start"
                 android:padding="16dp" />
 
@@ -73,7 +71,6 @@
                 android:background="@drawable/edit_text_bg"
                 android:text="Payment Options"
                 android:textColor="#000000"
-                android:drawableEnd=""
                 android:gravity="center_vertical|start"
                 android:padding="16dp"
                 android:layout_marginTop="16dp" />
@@ -85,44 +82,34 @@
                 android:background="@drawable/edit_text_bg"
                 android:text="About Us"
                 android:textColor="#000000"
-                android:drawableEnd=""
                 android:gravity="center_vertical|start"
                 android:padding="16dp"
                 android:layout_marginTop="16dp" />
 
+
+
         </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:weight="vertical"
-            android:gravity="center" >
-
             <Button
                 android:id="@+id/btn_logout"
                 android:layout_width="178dp"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/bottom_nav"
-                android:layout_centerHorizontal="true"
+                android:layout_gravity="center"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="300dp"
+                android:layout_marginTop="50dp"
                 android:backgroundTint="#707B65"
                 android:text="Log out"
-                android:textColor="#FFFFFFFF" />
-        </LinearLayout>
+                android:textColor="@color/cremaPalido" />
+
+
         </LinearLayout>
 
     </ScrollView>
 
 
 
-
-
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
