--- a/Wrapsy/app/src/main/res/layout/activity_order_details.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_order_details.xml
@@ -237,7 +237,7 @@
 
     </LinearLayout>
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
