--- a/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
@@ -69,7 +69,7 @@
     </LinearLayout>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
