--- a/Wrapsy/app/src/main/res/layout/activity_profile_edit_profile.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profile_edit_profile.xml
@@ -183,9 +183,8 @@
 
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
