--- a/Wrapsy/app/src/main/res/layout/activity_profile_new_list.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profile_new_list.xml
@@ -157,10 +157,9 @@ tools:context=".ProfileEditProfile">
 
 </ScrollView>
 
-<include
-    android:layout="@layout/bottom_navigation"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true" />
+    <include
+        layout="@layout/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
