--- a/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_optionspayment_options.xml
@@ -132,8 +132,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:weight="vertical">
+     >
 
                 <Button
                     android:id="@+id/btn_logout"
