--- a/Wrapsy/app/src/main/res/layout/activity_stores.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_stores.xml
@@ -14,51 +14,53 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical">
-
-            <!--Menu de arriba bien insano-->
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:padding="16dp">
 
-                <ImageButton
-                    android:id="@+id/btn_basket"
+                <ImageView
+                    android:id="@+id/basketIcon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_margin="5dp"
+                    android:padding="8dp"
                     android:background="@drawable/circleyellow"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_shopping_basket"
-                    android:scaleType="center"
-                    android:layout_margin="8dp"/>
+                    android:contentDescription="Shopping basket" />
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-
-                <ImageButton
-                    android:id="@+id/btn_more_options"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/circleyellow"
-                    android:src="@drawable/ic_tres_rayitas"
-                    android:scaleType="center"
-                    android:layout_margin="8dp"
-                    />
-
-                <ImageButton
+                <ImageView
                     android:id="@+id/btn_notificaciones"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
+                    android:layout_margin="5dp"
+                    android:padding="8dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/circleyellow"
                     android:src="@drawable/ic_notificaciones"
-                    android:scaleType="fitCenter"
-                    android:padding="5dp"
-                    android:layout_margin="8dp"/>
-            </LinearLayout>
+                    android:contentDescription="Notifications" />
+
+                <ImageView
+                    android:id="@+id/options"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="5dp"
+                    android:padding="8dp"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/circleyellow"
+                    android:src="@drawable/ic_tres_rayitas"
+                    android:contentDescription="Menu" />
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
