--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
@@ -10,6 +10,11 @@
     android:layout_height="match_parent"
     tools:context=".BasketCardConfirmationActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -120,10 +125,12 @@
 
 
     </LinearLayout>
+    </ScrollView>
 
     <include
         android:layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 
 </LinearLayout>
