Navegación de pantallas

--- a/Wrapsy/app/src/main/res/layout/activity_orders.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_orders.xml
@@ -26,7 +26,7 @@
                 android:padding="16dp">
 
                 <ImageView
-                    android:id="@+id/basketIcon"
+                    android:id="@+id/btn_basket"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
@@ -38,7 +38,7 @@
                     android:contentDescription="Shopping basket" />
 
                 <ImageView
-                    android:id="@+id/menuIcon"
+                    android:id="@+id/btn_notificaciones"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="5dp"
@@ -50,12 +50,12 @@
                     android:contentDescription="Menu" />
 
                 <ImageView
-                    android:id="@+id/options"
+                    android:id="@+id/more_options"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_margin="1dp"
                     android:padding="8dp"
-                    android:layout_toStartOf="@id/menuIcon"
+                    android:layout_toStartOf="@id/btn_notificaciones"
                     android:layout_centerVertical="true"
                     android:background="@drawable/circleyellow"
                     android:src="@drawable/ic_tres_rayitas"
