--- a/Wrapsy/app/src/main/res/layout/activity_coupons.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_coupons.xml
@@ -28,7 +28,7 @@
             android:contentDescription="Shopping basket" />
 
         <ImageView
-            android:id="@+id/menuIcon"
+            android:id="@+id/btn_notificaciones"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="5dp"
@@ -45,7 +45,7 @@
             android:layout_height="40dp"
             android:layout_margin="5dp"
             android:padding="8dp"
-            android:layout_toStartOf="@id/menuIcon"
+            android:layout_toStartOf="@id/btn_notificaciones"
             android:layout_centerVertical="true"
             android:background="@drawable/circleyellow"
             android:src="@drawable/ic_tres_rayitas"
