--- a/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_plantilla_store.xml
@@ -56,13 +56,29 @@
 
         </LinearLayout>
 
-        <GridView
-            android:id="@+id/productos_catalogo"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="290dp"
-            android:numColumns="2"
-            android:layout_marginTop="18dp"
-            android:paddingHorizontal="6dp"/>
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <GridView
+                    android:id="@+id/productos_catalogo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:numColumns="2"
+                    android:layout_marginTop="18dp"
+                    android:paddingHorizontal="6dp"
+                    android:overScrollMode="never"
+                    android:scrollbars="none"
+                    android:nestedScrollingEnabled="true"/>
+            </LinearLayout>
+
+        </ScrollView>
 
 
 
