--- a/Wrapsy/app/src/main/res/layout/activity_profile.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profile.xml
@@ -34,7 +34,7 @@
                     android:src="@drawable/ic_wrapsy" />
 
                 <ImageView
-                    android:id="@+id/menuIcon"
+                    android:id="@+id/btn_notificaciones"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
@@ -46,12 +46,12 @@
                     android:src="@drawable/ic_notificaciones" />
 
                 <ImageView
-                    android:id="@+id/options"
+                    android:id="@+id/more_options"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_margin="1dp"
-                    android:layout_toStartOf="@id/menuIcon"
+                    android:layout_toStartOf="@id/btn_notificaciones"
                     android:background="@drawable/circleyellow"
                     android:contentDescription="Options"
                     android:padding="8dp"
@@ -91,8 +91,6 @@
                     android:id="@+id/iv_edit_name"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_toEndOf="@id/tv_username"
-                    android:layout_alignBottom="@id/tv_username"
                     android:layout_marginStart="8dp"
                     android:src="@drawable/ic_edit" />
                 <LinearLayout
