--- a/Wrapsy/app/src/main/res/layout/activity_orders.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_orders.xml
@@ -107,6 +107,7 @@
                     app:cardElevation="0dp">
 
                     <LinearLayout
+                        android:id="@+id/order_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
@@ -114,6 +115,7 @@
                         android:padding="16dp">
 
                         <ImageView
+                            android:id="@+id/btn_order"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:layout_marginLeft="16dp"
