--- a/Wrapsy/app/src/main/res/layout/activity_log_in.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_log_in.xml
@@ -75,7 +75,7 @@
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/tvSignUp"
+            android:id="@+id/btn_sign_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -97,6 +97,7 @@
             />
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="138dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
