--- a/Wrapsy/app/src/main/res/layout/activity_sing_up.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_sing_up.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#1E1E1E"
     android:orientation="vertical"
-    tools:context=".SingUp">
+    tools:context=".SingUpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -132,6 +132,7 @@
             android:textSize="14sp" />
 
         <Button
+            android:id="@+id/btn_confirm"
             android:layout_width="138dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
