--- a/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#1E1E1E"
     android:orientation="vertical"
-    tools:context=".SingUpAdress">
+    tools:context=".SingUpAdressActivity">
 
 
 
@@ -116,6 +116,7 @@
             android:textSize="14sp" />
 
         <Button
+            android:id="@+id/btn_ready"
             android:layout_width="161dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
