--- a/Wrapsy/app/src/main/res/layout/activity_more_optionspurchase_history.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_optionspurchase_history.xml
@@ -5,7 +5,7 @@
     android:background="#E6CEED"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoreOptions">
+    tools:context=".PurchaseHistory">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                     android:src="@drawable/ic_wrapsy" />
 
                 <ImageView
-                    android:id="@+id/menuIcon"
+                    android:id="@+id/btn_notificaciones"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_alignParentEnd="true"
@@ -117,7 +117,7 @@
     </ScrollView>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
