--- a/Wrapsy/app/src/main/res/layout/activity_about_us.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_about_us.xml
@@ -102,7 +102,7 @@
     </ScrollView>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
