--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
@@ -12,7 +12,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
 
 
     <LinearLayout
@@ -116,19 +118,32 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
+
                 </LinearLayout>
+
+
             </LinearLayout>
+
 
         </androidx.cardview.widget.CardView>
 
 
+        <Button
+            android:id="@+id/btn_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm"
+            android:layout_marginTop="18dp"
+            android:backgroundTint="@color/verdeOlivaGrisaceo"
+            app:cornerRadius="8dp"
+            android:layout_gravity="center"/>
 
 
     </LinearLayout>
     </ScrollView>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
