--- a/Wrapsy/app/src/main/res/layout/activity_card_information_add_card.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_card_information_add_card.xml
@@ -22,7 +22,7 @@
                     android:padding="16dp">
 
                     <ImageView
-                        android:id="@+id/basketIcon"
+                        android:id="@+id/btn_basket"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_margin="5dp"
@@ -34,7 +34,7 @@
                         android:contentDescription="Shopping basket" />
 
                     <ImageView
-                        android:id="@+id/menuIcon"
+                        android:id="@+id/btn_notificaciones"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_margin="5dp"
@@ -46,12 +46,12 @@
                         android:contentDescription="Notifications" />
 
                     <ImageView
-                        android:id="@+id/options"
+                        android:id="@+id/more_options"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_margin="5dp"
                         android:padding="8dp"
-                        android:layout_toStartOf="@id/menuIcon"
+                        android:layout_toStartOf="@id/btn_notificaciones"
                         android:layout_centerVertical="true"
                         android:background="@drawable/circleyellow"
                         android:src="@drawable/ic_tres_rayitas"
@@ -79,7 +79,7 @@
         </ScrollView>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
