--- a/Wrapsy/app/src/main/res/layout/activity_choose_card.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_choose_card.xml
@@ -70,6 +70,7 @@
                 android:layout_marginBottom="40dp" />
 
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
@@ -122,7 +123,7 @@
                 app:cardElevation="0dp">
 
                 <TextView
-                    android:id="@+id/add_card_button"
+                    android:id="@+id/btn_add_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/verdeOlivaGrisaceo"
@@ -138,7 +139,7 @@
     </ScrollView>
 
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
