--- a/Wrapsy/app/src/main/res/layout/activity_notifications.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_notifications.xml
@@ -27,7 +27,7 @@
             android:contentDescription="Shopping basket" />
 
         <ImageView
-            android:id="@+id/menuIcon"
+            android:id="@+id/more_options"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="8dp"
