--- a/Wrapsy/app/src/main/res/layout/activity_profilelists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profilelists.xml
@@ -338,7 +338,7 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/btn_logout"
+                    android:id="@+id/btn_new_list"
                     android:layout_width="178dp"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/bottom_nav"
