--- a/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_sing_up_adress.xml
@@ -49,6 +49,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/etPais"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
@@ -61,6 +62,7 @@
                 android:textSize="14sp" />
 
             <EditText
+                android:id="@+id/etEstado"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -80,6 +82,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/etCiudad"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
@@ -92,6 +95,7 @@
                 android:textSize="14sp" />
 
             <EditText
+                android:id="@+id/etCodigoP"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -105,6 +109,7 @@
         </LinearLayout>
 
         <EditText
+            android:id="@+id/etDireccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
