--- a/Wrapsy/app/src/main/res/layout/activity_send_invite.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_send_invite.xml
@@ -191,7 +191,7 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
