--- a/Wrapsy/app/src/main/res/layout/activity_share_with_friends.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_share_with_friends.xml
@@ -114,21 +114,7 @@
                     android:background="@color/pistache"
                     android:gravity="center"
                     android:layout_marginTop="2dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tvSendQuiz"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/purple_button"
-                        android:gravity="center"
-                        android:padding="16dp"
-                        android:text="Send quiz"
-                        android:textColor="#FFFFFF"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
+                    android:orientation="horizontal"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
