--- a/Wrapsy/app/src/main/res/layout/activity_category_gift.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_category_gift.xml
@@ -6,87 +6,130 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@color/cremaPalido"
-    tools:context=".PlantillaStoreActivity">
-    <LinearLayout
+    tools:context=".CategoryGiftActivity">
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="20dp"
-        >
+        android:layout_weight="1"
+        android:fillViewport="true">
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="40dp"
-            >
+            android:gravity="center_horizontal"
+            android:padding="20dp">
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center"
-                android:contentDescription="Logo"
-                android:src="@drawable/ic_wrapsy" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Details"
-                android:textColor="@color/dark_green"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <EditText
-                android:id="@+id/editTextText"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:ems="10"
-                android:padding="3dp"
-                android:background="@color/white"
-                android:hint="Search"
-                android:inputType="text"
-                android:drawableEnd="@drawable/ic_search"
-                 />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/basketIcon"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/circleyellow"
+                    android:contentDescription="Shopping basket"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_shopping_basket" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+                <ImageView
+                    android:id="@+id/btn_notificaciones"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/circleyellow"
+                    android:contentDescription="Menu"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_notificaciones" />
+
+                <ImageView
+                    android:id="@+id/options"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="1dp"
+                    android:layout_toStartOf="@id/btn_notificaciones"
+                    android:background="@drawable/circleyellow"
+                    android:contentDescription="Options"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_tres_rayitas" />
+            </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="40dp"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
-                <GridView
-                    android:id="@+id/productos_catalogo"
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:contentDescription="Logo"
+                    android:src="@drawable/ic_wrapsy" />
+
+                <TextView
+                    android:id="@+id/category_title"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:numColumns="2"
-                    android:layout_marginTop="18dp"
-                    android:paddingHorizontal="6dp"
-                    android:overScrollMode="never"
-                    android:scrollbars="none"
-                    android:nestedScrollingEnabled="true"/>
+                    android:layout_marginTop="8dp"
+                    android:text="Category"
+                    android:textColor="@color/dark_green"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
-        </ScrollView>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
+                <EditText
+                    android:id="@+id/editTextText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:drawableEnd="@drawable/ic_search"
+                    android:ems="10"
+                    android:hint="Search"
+                    android:inputType="text"
+                    android:padding="3dp" />
+            </LinearLayout>
 
+            <TextView
+                android:id="@+id/empty_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textStyle="bold"
+                android:textSize="24sp"
+                android:textColor="@color/dark_green"
+                android:visibility="invisible" />
 
-    </LinearLayout>
+            <GridView
+                android:id="@+id/gifts_category"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:nestedScrollingEnabled="true"
+                android:numColumns="2"
+                android:overScrollMode="never"
+                android:paddingHorizontal="6dp"
+                android:scrollbars="none" />
+        </LinearLayout>
+    </ScrollView>
 
     <include
         layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
