--- a/Wrapsy/app/src/main/res/layout/activity_log_in.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_log_in.xml
@@ -91,7 +91,7 @@
             android:layout_marginTop="16dp"
             android:backgroundTint="#E3F6C6"
             android:paddingLeft="40dp"
-            android:text="Use Gmail"
+            android:text="Use Google"
             android:textColor="#3E3E3E"
             android:layout_marginBottom="20dp"
             />
